--- a/task-2-login-page/index.css
+++ b/task-2-login-page/index.css
@@ -1,3 +1,159 @@
+/* Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 h1 {
-    color: orange;
+  color: orange;
+}
+body,
+html {
+  height: 100%;
+  font-family: "Segoe UI", sans-serif;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: table;
+}
+
+.left-panel,
+.right-panel {
+  display: table-cell;
+  vertical-align: top;
+  height: 100%;
+}
+
+.left-panel {
+  width: 35%;
+  background: white;
+  padding: 40px 20px;
+  position: relative;
+}
+
+.logo {
+  margin-top: 20px;
+  width: 120px;
+}
+
+footer {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  color: #003366;
+  font-size: 0.85rem;
+}
+
+.right-panel {
+  width: 65%;
+  background-image: url("https://i.natgeofe.com/n/72d25b07-5849-4d2a-9249-a48c5ed831c3/zebras-kilimanjaro-africa.jpg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  filter: grayscale(100%);
+}
+
+.login-box {
+  width: 350px;
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  transform: translateY(-50%);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+.login-header {
+  background-color: green;
+  color: white;
+  padding: 0;
+  height: 3rem;
+  text-align: start;
+}
+
+.header-left {
+  display: inline-block;
+  background-color: black;
+  color: white;
+  padding: 20px;
+  vertical-align: top;
+  height: inherit;
+}
+.header-right {
+  display: inline-block;
+  background-color: green;
+  color: white;
+  padding: 20px;
+  height: inherit;
+  vertical-align: top;
+}
+.login-title {
+  font-weight: bold;
+  color: white;
+}
+.login-icon img {
+  filter: brightness(0) invert(1);
+  width: 24px;
+  height: auto;
+}
+
+.login-box p {
+  padding: 15px 20px 0;
+  font-size: 0.95rem;
+}
+
+form {
+  padding: 10px 20px 20px;
+}
+
+label {
+  font-size: 0.85rem;
+  display: inline-block;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 8px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  background-color: #fffbe6;
+  border-radius: 3px;
+}
+
+input:focus {
+  outline: 1px solid #00a651;
+}
+
+.password-field {
+  position: relative;
+}
+
+.password-field .toggle {
+  position: absolute;
+  right: 10px;
+  top: 9px;
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+
+button {
+  float: right;
+  margin-block: 20px;
+  padding: 10px;
+  background-color: #1c2541;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #2a3559;
 }
