--- a/task-8-image-gallery/index.css
+++ b/task-8-image-gallery/index.css
@@ -1,3 +1,21 @@
-h1 {
-    color: orange;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 16px;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  place-items: center;
+}
+body > a {
+  padding: 2rem;
+  display: block;
 }
