--- a/task-8-image-gallery/layouts/design.html
+++ b/task-8-image-gallery/layouts/design.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="grid-container">
-      <div class="row row-1">
+      <div class="row">
         <img
           src="../images/6bcb1c4e-ba41-4b9f-ba80-1660e5f8504c.jpeg"
           alt="Image 1"
@@ -30,13 +30,13 @@
           alt="Image 5"
         />
       </div>
-      <div class="row row-2">
+      <div class="row">
         <img
           src="../images/high-resolution-beach-pier-photo-m.jpg"
           alt="Single Image"
         />
       </div>
-      <div class="row row-3">
+      <div class="row">
         <img src="../images/thailand in january.jpeg" alt="Image 6" />
         <img src="../images/long.jpeg" alt="Image 7" />
         <img src="../images/thailand in january.jpeg" alt="Image 8" />
