--- a/task-10-chat/index.css
+++ b/task-10-chat/index.css
@@ -4,7 +4,7 @@
 }
 
 html {
-  font-size: 16px;
+  font-size: 15px;
 }
 
 * {
@@ -16,6 +16,9 @@ html {
 body {
   font-family: "Lexend Deca", sans-serif;
   background: #f5f7fa;
+}
+
+.play-area {
   height: 100vh;
   overflow: hidden;
 }
@@ -49,7 +52,7 @@ body {
   flex: 3;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   background: #fff;
   border: solid 0.0625rem #e1e8ed;
@@ -65,19 +68,42 @@ body {
 
 .search-bar input {
   border: none;
-  background: transparent;
   outline: none;
   font-size: 0.875rem;
   color: #14171a;
+  text-overflow: ellipsis;
 }
 
 .header-actions {
   flex: 2;
-  padding-left: 1.5rem;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: end;
+  margin-left: 2rem;
+}
+.svg-container {
+  margin-right: 1rem;
+  height: 1rem;
+}
+.svg-container > .first-svg {
+  height: auto;
+}
+
+.svg-container > .circle-container {
+  width: 1rem;
+  height: 1rem;
+  top: -1.7rem;
+  left: 0.4rem;
+  position: relative;
+  transform: translate(50%, 50%);
+}
+
+.svg-container > .circle-container svg {
+  height: auto;
+}
+.header-actions > .user-profile {
+  align-items: flex-start;
 }
 
 .create-job-btn {
@@ -103,8 +129,8 @@ body {
 }
 
 .notification-icon {
-  height: 1.5rem;
-  width: 1.5rem;
+  margin-inline: 1rem;
+  height: 2rem;
   fill: #c7c8d2;
   cursor: pointer;
 }
@@ -123,9 +149,7 @@ body {
   border-radius: 50%;
 }
 .user-profile svg:last-child {
-  height: 1.2rem;
   fill: #91949e;
-  margin-left: 0.5rem;
 }
 
 .main-content {
@@ -169,7 +193,7 @@ body {
   border-bottom: solid 0.0625rem #e1e8ed;
 }
 .nav-item.active {
-  background: #fff;
+  background: #e8f4fd;
   fill: #2383f7;
   color: #2383f7;
   font-weight: 500;
@@ -268,13 +292,10 @@ body {
 }
 
 .message-item {
-  margin-top: 0rem;
-  height: 10rem;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
   padding: 1rem;
-  border-bottom: 0.0625rem solid #f7f9fa;
   cursor: pointer;
   transition: background-color 0.2s ease;
   position: relative;
@@ -294,78 +315,83 @@ body {
   height: 2.5rem;
   border-radius: 50%;
   object-fit: cover;
-  border: 2px solid #e1e8ed;
 }
 
 .initials-avatar {
+  display: flex;
+  margin-left: 0.75rem;
+  margin-right: 1rem;
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
   background-color: #91c5fd;
   color: #3c4146;
-  display: flex;
   justify-content: center;
   align-items: center;
-  flex-shrink: 0;
 }
 .message-content {
-  display: flex;
-  gap: 0.25rem;
-  min-width: 0;
+  display: grid;
+  grid-template-columns: auto auto 4fr auto;
+  align-items: center;
+  justify-items: center;
 }
 
 .message-header {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
-  gap: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
 }
 
 .name {
   padding-block: 0.3rem;
   font-weight: 600;
   color: #14171a;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
 }
 
 .time {
   color: #657786;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
 }
 
 .role {
-  margin-inline: 1rem;
   display: flex;
   flex-direction: column;
   color: #657786;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
+  margin-right: 1rem;
 }
 .role strong {
   color: #2383f7;
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 .role h4 {
   color: #000;
+  font-size: 0.8rem;
+}
+.role span {
+  padding-top: 0.25rem;
   font-size: 0.75rem;
 }
 .preview p {
-  padding-left: 1rem;
-  padding-top: 0.5rem;
   color: #657786;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   overflow: hidden;
   text-overflow: ellipsis;
-  text-wrap: balance;
-  max-lines: 2;
+  margin-left: 1rem;
 }
-
+.read-indicator {
+  width: 0.5rem;
+  height: 0.5rem;
+  background: none;
+  border-radius: 50%;
+}
 .unread-indicator {
   width: 0.5rem;
   height: 0.5rem;
   background: #1da1f2;
   border-radius: 50%;
-  align-self: center;
 }
 
 .chat-area {
@@ -472,11 +498,11 @@ body {
   text-align: center;
   color: #657786;
   font-size: 0.75rem;
-  padding: 0.5rem;
-  background: #f7f9fa;
-  border-radius: 1rem;
-  width: fit-content;
+  padding: 0.25rem 0.75rem;
+  background: #fff;
+  border-radius: 0.5rem;
   margin: 0 auto;
+  border: 0.0625rem solid #e1e8ed;
 }
 
 .message {
@@ -486,21 +512,23 @@ body {
   align-items: start;
 }
 
-.message.received {
-  grid-template-columns: 1fr auto;
-}
-
 .message-bubble {
-  background: #f7f9fa;
+  background: #fff;
   padding: 1rem;
   border-radius: 1rem;
-  max-width: 70%;
+  border: 0.0625rem solid #e1e8ed;
+  margin-right: 3.5rem;
 }
-
-.message.sent .message-bubble {
-  background: #e8f4fd;
+.message-sent {
+  background: #eaf3ff;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 0.0625rem solid #abc5eb;
+  margin-left: 3.5rem;
 }
-
+.sent-time {
+  text-align: right;
+}
 .sender-name {
   font-weight: 600;
   color: #14171a;
@@ -517,21 +545,28 @@ body {
 .message-time {
   color: #657786;
   font-size: 0.75rem;
-  margin-top: 0.5rem;
+  margin-inline: 3.5rem;
 }
 
 .chat-input {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 1rem;
+  display: flex;
+  flex-direction: column;
   padding: 1rem;
   border: 0.0625rem solid #e1e8ed;
-  align-items: end;
   background-color: white;
   border-radius: 1rem;
   margin: 1rem;
 }
-
+.message-box {
+  flex: 1;
+}
+.input-buttons {
+  flex: 1;
+  display: grid;
+  grid-template-columns: 2fr auto;
+  gap: 0.5rem;
+  align-items: center;
+}
 .input-container {
   display: grid;
   gap: 0.5rem;
@@ -557,46 +592,52 @@ body {
   cursor: pointer;
   padding: 0.25rem;
 }
-
+.input-actions svg {
+  height: 1.4rem;
+  fill: #657786;
+  padding: 0.25rem;
+  cursor: pointer;
+}
 .send-btn {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
-  gap: 0.5rem;
+  height: 1em;
   background: #1da1f2;
   color: white;
   border: none;
-  padding: 0.75rem 1rem;
   border-radius: 0.375rem;
   cursor: pointer;
+  padding: 1rem;
+  padding-bottom: 2rem;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 0.5rem;
   font-size: 0.875rem;
 }
-.last{
-  display: flex;
-  flex-direction: row;
+.send-btn svg {
+  fill: #fff;
+  height: 1.2rem;
+}
+.last {
+  display: grid;
+  grid-template-columns: 1fr 1fr auto;
   color: #657786;
-} .last div{
+  align-items: center;
+  justify-content: end;
+  gap: 0.5rem;
+}
+.last div {
   padding-right: 1rem;
   padding-top: 2rem;
 }
 @media (min-width: 768px) {
   .main-content {
-    grid-template-columns: 12rem 20rem 1fr;
+    grid-template-columns: 0.5fr 1.5fr 4fr;
   }
   .sidebar {
     display: block;
   }
   .messages-panel {
     display: flex;
-  }
-  .nav-item span {
-    display: none;
-  }
-}
-
-@media (min-width: 1025px) {
-  .main-content {
-    grid-template-columns: 15rem 22rem 1fr;
   }
   .nav-item span {
     display: inline;
